test/multifile/Inputs/require-layout-error-other.swift
public struct S {
  var x: DoesNotExist // expected-error {{cannot find type 'DoesNotExist' in scope}}
}
